--- a/books/templates/home.html
+++ b/books/templates/home.html
@@ -142,9 +142,14 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Libros</a></li>
                 <li><a href="#">Autores</a></li>
                 <li><a href="#">Contacto</a></li>
+                <li>
+                    <form action="#" method="get" class="search-form">
+                        <input type="text" name="q" placeholder="Buscar por título, autor o categoría">
+                        <button type="submit">Buscar</button>
+                    </form>                    
+                </li>
             </ul>
         </nav>
     </header>
