implement login and logout

--- a/books/templates/home.html
+++ b/books/templates/home.html
@@ -144,6 +144,8 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Autores</a></li>
                 <li><a href="#">Contacto</a></li>
+                <li><a href="/auth/logout">Cerrar Sesión</a></li>
+                
                 <li>
                     <form action="#" method="get" class="search-form">
                         <input type="text" name="q" placeholder="Buscar por título, autor o categoría">
