--- a/auth/templates/login.html
+++ b/auth/templates/login.html
@@ -18,6 +18,7 @@
                 <label for="password">Contraseña</label>
                 <input type="password" id="password" name="password" required>
             </div>
+            <p>{{error}}</p><br>
             <button type="submit">Iniciar Sesión</button>
         </form>
     </div>
