--- a/auth/templates/login.html
+++ b/auth/templates/login.html
@@ -21,6 +21,7 @@
             <p>{{error}}</p><br>
             <button type="submit">Iniciar Sesión</button>
         </form>
+        <button><a href="/">Registrar</a></button>
     </div>
 </body>
 </html>
