--- a/books/templates/home.html
+++ b/books/templates/home.html
@@ -89,7 +89,7 @@
             box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
         }
 
-       
+
 
         .titulo {
             text-align: center;
@@ -144,13 +144,14 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Autores</a></li>
                 <li><a href="#">Contacto</a></li>
+                <li><a href="#">Panel administrador</a></li>
                 <li><a href="/auth/logout">Cerrar Sesión</a></li>
-                
+
                 <li>
                     <form action="#" method="get" class="search-form">
                         <input type="text" name="q" placeholder="Buscar por título, autor o categoría">
                         <button type="submit">Buscar</button>
-                    </form>                    
+                    </form>
                 </li>
             </ul>
         </nav>
